<b><u> v1.26, xx.xx.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Delete the xCT+ Profile.
<font color=#FF8C00>&#9830;</font> Install: Use default for colorOverride in PartyFrames.
<font color=#FF8C00>&#9830;</font> Install: Adjust actionbars due to recent changes in ElvUI.
<font color=#FF8C00>&#9830;</font> Replace the BenikUI Logo & Version in FlightModus with mine.
<font color=#FF8C00>&#9830;</font> Clean Up.

<b><u> v1.25, 10.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Adjust settings for RoleIcons.
<font color=#FF8C00>&#9830;</font> Install: Return of the BenikUI PowerBar Status Texture.
<font color=#FF8C00>&#9830;</font> Update LibElv-GameMenu.

<b><u> v1.24, 08.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Remove some unused Settings.
<font color=#FF8C00>&#9830;</font> Install: Attach Player Debuffs/Target Buffs to the PowerBar.
<font color=#FF8C00>&#9830;</font> Skins: Kill some animations in the ObjectiveTracker.
<font color=#FF8C00>&#9830;</font> Rearrange the Options.

<b><u> v1.23, 06.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> UnitFrames: Add an option to choose a different Combat/Rested Icon (Credits: Darth Predator)

<b><u> v1.22, 05.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Adjust the Player/Target Health xOffset

<b><u> v1.21, 05.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> <font color=#FF0000>W A R N I N G:</font> Please do a complete new Install due to major changes in ElvUI 9.00 & ElvUI_BenikUI 2.5.
<font color=#FF8C00>&#9830;</font> Rename MerathilisUI to <font color=#FF8C00>ElvUI_MerathilisUI</font>.
<font color=#FF8C00>&#9830;</font> Major Code Cleanup.
<font color=#FF8C00>&#9830;</font> Install: Adjustments due to the ElvUI UnitFrames Overhaul.
<font color=#FF8C00>&#9830;</font> Install: Change the ChatTab Font to MerathilisPrototype.
<font color=#FF8C00>&#9830;</font> Install: Add more Settings for SLE.