@@ -5,7 +5,7 @@ local S = E:GetModule('Skins');
 local _G = _G
 
 local function styleSpellBook()
-	if E.private.skins.blizzard.enable ~= true or E.private.skins.blizzard.spellbook ~= true or E.private.mui.skins.blizzard.spellbook ~= true then return; end
+	if E.private.skins.blizzard.enable ~= true or E.private.skins.blizzard.spellbook ~= true or E.private.muiSkins.blizzard.spellbook ~= true then return; end
  
 	if _G["SpellBookFrame"].pagebackdrop then
 		_G["SpellBookFrame"].pagebackdrop:Hide()
